create first routes for testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist"
+     "module": "commonjs",
+     "moduleResolution": "node",
+     "pretty": true,
+     "target": "es6",
+     "outDir": "./dist",
+     "baseUrl": "./lib"
   },
-  "lib": ["es2015"]
+  "include": [
+     "lib/**/*.ts"
+  ],
+  "exclude": [
+     "node_modules"
+  ]
 }
