--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "collector",
   "version": "1.0.0",
   "description": "Web Application to track Record Collection",
-  "main": "dist/app.js",
+  "main": "./dist/server.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "lint": "eslint . --ext .ts",
-    "test:": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node ./lib/server.ts",
+    "dev": "tsc && nodemon ./dist/server.js",
+    "prod": "tsc && nodemon ./dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,13 +20,17 @@
   },
   "homepage": "https://github.com/davidgilmoreinnis/Collector#readme",
   "devDependencies": {
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.15",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.4",
+    "nodemon": "^2.0.20"
   }
 }
